2001-02-06  Eric Busboom  <eric@softwarestudio.org>

	* icaltime.c Changed icaltime_from_day_of_year to run mktime in
 	the UTC timezone. This fixed a bug where it would return one day
 	eariler for some timezones.

2001-01-26  Eric Busboom  <eric@softwarestudio.org>

	* icalproperty.c.in Improved icalproperty_as_ical_string() to
 	eliminate the possibility of having a VALUE parameter that does
 	not match the actual kind of value.

	* icalvalue.c.in made icalvalue_*_trigger() and
 	icalvalue_*_datetimeperiod non-autogenerated. These routines were
 	for combined value type -- non standard values that can have more
 	than on standard value type. These non-standard types now delegate
 	to stadard types.
	
	
2001-01-24  Eric Busboom  <eric@softwarestudio.org>

	* icalfileset.c fixed icalfileset_read-from_file so it will handle
 	lines longer than 80 char properly.

2001-01-23  Eric Busboom  <eric@softwarestudio.org>

	* icltime.c Removed all of the _local_ routines and simplified
 	icaltime_utc_offset and icaltime_as_timet

	* regression.c Added tests for triggers and improvements to icaltime.c

	* icaltypes.c Addedd icaltriggertype_from_string and changed
 	icaltriggertype to be a struct

2001-01-22  Eric Busboom  <eric@softwarestudio.org>

	* icaltime.c implemented icaldurationtype_from_string to parse the
 	string it self, rather than use lex/yacc

2001-01-15  Eric Busboom  <eric@softwarestudio.org>

	* icalfileset.c Many improvements. File locking now works, and so
 	does searching with icalfileset_select()

2001-01-08  Eric Busboom  <eric@softwarestudio.org>

	* Makefile.am Remove spaces after -I in several 
	Makefile.am routines. 

	* icalset.c removed return statements from some void functions.

	* icalparameter.c.in Added break to default: case that had no
 	body. Compilers on Solaris and Tru64 UNIX complained.

2001-01-02  Eric Busboom  <eric@softwarestudio.org>

	* icaltime.c Changed icaldurationtype_from_time and _as_timet to