@@ -3,7 +3,7 @@
     FILE: icalcstps.c
     CREATOR: ebusboom 23 Jun 2000
   
-    $Id: icalcstp.c,v 1.2 2001-01-16 06:55:09 ebusboom Exp $
+    $Id: icalcstp.c,v 1.3 2001-02-09 17:53:40 ebusboom Exp $
     $Locker:  $
     
     (C) COPYRIGHT 2000, Eric Busboom, http://www.softwarestudio.org
@@ -43,7 +43,7 @@ enum cstps_state {
     AUTHENTICATED,
     IDENTIFIED,
     DISCONNECTED,
-    RECEIVE,
+    RECEIVE
 };
 
 struct icalcstps_impl {
