@@ -1,29 +1,0 @@
-/* -*- Mode: C -*-
-    ======================================================================
-    FILE: icalssutil.c
-    CREATOR: ebusboom 23 aug 2000
-  
-    $Id: icalssutil.c,v 1.1.1.1 2001-01-02 07:33:04 ebusboom Exp $
-    $Locker:  $
-    
-    (C) COPYRIGHT 2000, Eric Busboom, http://www.softwarestudio.org
-    
-    This program is free software; you can redistribute it and/or modify
-    it under the terms of either: 
-    
-    The LGPL as published by the Free Software Foundation, version
-    2.1, available at: http://www.fsf.org/copyleft/lesser.html
-    
-    Or:
-    
-    The Mozilla Public License Version 1.0. You may obtain a copy of
-    the License at http://www.mozilla.org/MPL/
-
-
-    ======================================================================*/
-
-#ifdef HAVE_CONFIG_H
-#include "config.h"
-#endif
-
-
