@@ -1,5 +1,7 @@
 BEGIN:VCALENDAR
 BEGIN:VEVENT
 SUMMARY:Bastille Day Party This option indicates that xauth should attempt to break any authority file locks before proceeding.
+SUMMARY:Bastille Day Party This option indicates that xauth should 
+ attempt to break any authority file locks before proceeding.
 END:VEVENT
 END:VCALENDAR
