@@ -254,7 +254,7 @@ DTSTART
  ;TZID=US-Eastern
  :19970519T090000
 RRULE
- :FREQ=YEARLY;INTERVAL=1;BYDAY=MO
+ :FREQ=YEARLY;INTERVAL=1;BYDAY=20MO
 END:VEVENT
 BEGIN:VEVENT
 DESCRIPTION
